# ocr-helper

./: .gitignore  pyproject.toml
models/: digit_svm.joblib  regex_patterns.json
src/ocrhelper/: api.py  generate_data.py  infer.py  registry.py  synth.py  train.py
src/ocrhelper/embed_template/: fast_api.py
test/ocrhelper/: test_font_loading.py
test/pictures/: Thumbs.db
